# ledfx-trigger

./: .gitignore  Cargo.toml  README.md  dependencies.arch.txt
src/: config.rs  inotify_worker.rs  ledfx-trigger.rs  ledfx.rs  monitor.rs  systray.rs  types.rs  util.rs
systemd/: ledfx-trigger.service
