[package]
name = "aoer-wled-doppler"
version = "0.4.1"
edition = "2024"
# default-run = "aoer-wled-doppler"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
jack = ["cpal/jack"]

[[bin]]
name = "ledfx-trigger"
path = "src/ledfx-trigger.rs"

[dependencies]
wled-json-api-library = "0.1.7"
reqwest = { version = "0.11.22", features = ["gzip", "blocking"] }
mdns-sd = "0.10.4"
dirs = "5.0.1"
anyhow = "1.0.79"
sunrise = "1.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
fern = { version = "0.6.2", features = ["colored"] }
serde = "1.0.204"
humantime = "2.1.0"
log = "0.4.22"
ron = "0.8.1"
cpal = { version = "0.15.3" }
ureq = { version = "2.10.0", features = ["json"] }
serde_json = "1.0.121"
clap = { version = "4.5.20", features = ["derive"] }
tray-icon = "0.21.3"
gtk = "0.18.1"
image = "0.25.5"
inotify = "0.11.0"
tokio = {version="1.49.0", features=["sync", "macros"]}
